--- a/dev/sass/_models.scss
+++ b/dev/sass/_models.scss
@@ -234,7 +234,7 @@
       font-size: 14px;
     }
     &-grid-pol {
-      top: -18px;
+      top: -22px;
       background-color: #CBCDC9;
       width: 4px;
       height: 16px;
