--- a/dev/sass/_popups.scss
+++ b/dev/sass/_popups.scss
@@ -25,6 +25,7 @@
     justify-content: center;
     box-shadow: 4px 4px 24px rgba(44, 1, 12, 0.3);
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 
     @include tablet {
       height: 48px;
